--- a/InspectorJournal/Views/_ViewImports.cshtml
+++ b/InspectorJournal/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using InspectorJournal
 @using InspectorJournal.Models
+@using InspectorJournal.DataLayer.Models
+@using InspectorJournal.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper "*, InspectorJournal"
