--- a/InspectorJournal/Views/Inspections/Index.cshtml
+++ b/InspectorJournal/Views/Inspections/Index.cshtml
@@ -31,7 +31,7 @@
 }
 
 <table class="table table-striped table-bordered">
-    <thead>
+    <thead class="table-dark">
         <tr>
             <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.Inspector)</th>
             <th>
