--- a/InspectorJournal/Views/Enterprises/Create.cshtml
+++ b/InspectorJournal/Views/Enterprises/Create.cshtml
@@ -1,12 +1,12 @@
 ﻿@model InspectorJournal.DataLayer.Models.Enterprise
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
 }
 
-<h1>Create</h1>
+<h1>Создать</h1>
 
-<h4>Enterprise</h4>
+<h4>Предприятие</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -45,7 +45,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
