--- a/InspectorJournal/Views/Inspections/Details.cshtml
+++ b/InspectorJournal/Views/Inspections/Details.cshtml
@@ -1,11 +1,11 @@
 ﻿@model InspectorJournal.DataLayer.Models.Inspection
 
 @{
-    ViewData["Title"] = "Подробно";
+    ViewData["Title"] = "Детали";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Детально</h2>
+<h2>Детали</h2>
 
 <div>
     <h4>Проверка</h4>
