--- a/InspectorJournal/Views/Inspectors/Index.cshtml
+++ b/InspectorJournal/Views/Inspectors/Index.cshtml
@@ -1,13 +1,13 @@
 ﻿@model IEnumerable<InspectorJournal.DataLayer.Models.Inspector>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Инспектора";
 }
 
-<h1>Index</h1>
+<h1>Список инспекторов</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Создать</a>
 </p>
 <table class="table">
     <thead>
