--- a/InspectorJournal/Views/ViolationTypes/Create.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model InspectorJournal.DataLayer.Models.ViolationType
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Создать";
 }
 
-<h1>Create</h1>
+<h1>Создать</h1>
 
 <h4>ViolationType</h4>
 <hr />
@@ -35,7 +35,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
