--- a/InspectorJournal/Views/Enterprises/Delete.cshtml
+++ b/InspectorJournal/Views/Enterprises/Delete.cshtml
@@ -1,14 +1,14 @@
 ﻿@model InspectorJournal.DataLayer.Models.Enterprise
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Удалить";
 }
 
-<h1>Delete</h1>
+<h1>Удалить</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены,что хотите удалить эту запись?</h3>
 <div>
-    <h4>Enterprise</h4>
+    <h4>Предприятие</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -46,6 +46,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="EnterpriseId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Вернуться к списку</a>
     </form>
 </div>
