--- a/InspectorJournal/Views/Enterprises/Details.cshtml
+++ b/InspectorJournal/Views/Enterprises/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model InspectorJournal.DataLayer.Models.Enterprise
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Детали";
 }
 
-<h1>Details</h1>
+<h1>Детали</h1>
 
 <div>
-    <h4>Enterprise</h4>
+    <h4>Предприятие</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -44,5 +44,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.EnterpriseId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
