--- a/InspectorJournal/Views/Enterprises/Edit.cshtml
+++ b/InspectorJournal/Views/Enterprises/Edit.cshtml
@@ -1,12 +1,12 @@
 ﻿@model InspectorJournal.DataLayer.Models.Enterprise
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование";
 }
 
-<h1>Edit</h1>
+<h1>Редактировать</h1>
 
-<h4>Enterprise</h4>
+<h4>Предприятие</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,7 +46,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
