--- a/InspectorJournal/Views/Inspections/Delete.cshtml
+++ b/InspectorJournal/Views/Inspections/Delete.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Удаление</h2>
+<h2>Удалить</h2>
 
-<h3>Вы уверены, что хотите удалить эту запись?</h3>
+<h3>Вы уверены,что хотите удалить эту запись?</h3>
 <div>
     <h4>Проверка</h4>
     <hr />
