--- a/InspectorJournal/Views/Inspections/Edit.cshtml
+++ b/InspectorJournal/Views/Inspections/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Inspection
 
 @{
-    ViewData["Title"] = "Редактировать";
+    ViewData["Title"] = "Редактирование";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
