--- a/InspectorJournal/Views/Inspectors/Delete.cshtml
+++ b/InspectorJournal/Views/Inspectors/Delete.cshtml
@@ -1,12 +1,12 @@
 ﻿@model InspectorJournal.DataLayer.Models.Inspector
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Удалить";
 }
 
-<h1>Delete</h1>
+<h1>Удалить</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены,что хотите удалить эту запись?</h3>
 <div>
     <h4>Inspector</h4>
     <hr />
@@ -28,6 +28,6 @@
     <form asp-action="Delete">
         <input type="hidden" asp-for="InspectorId" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <a asp-action="Index">Вернуться к списку</a>
     </form>
 </div>
