--- a/InspectorJournal/Views/ViolationTypes/Details.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Details.cshtml
@@ -1,10 +1,10 @@
 ﻿@model InspectorJournal.DataLayer.Models.ViolationType
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Детали";
 }
 
-<h1>Details</h1>
+<h1>Детали</h1>
 
 <div>
     <h4>ViolationType</h4>
@@ -32,5 +32,5 @@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.ViolationTypeId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
