--- a/InspectorJournal/Views/ViolationTypes/Edit.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Edit.cshtml
@@ -1,10 +1,10 @@
 ﻿@model InspectorJournal.DataLayer.Models.ViolationType
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Редактирование";
 }
 
-<h1>Edit</h1>
+<h1>Редактировать</h1>
 
 <h4>ViolationType</h4>
 <hr />
@@ -36,7 +36,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Вернуться к списку</a>
 </div>
 
 @section Scripts {
