--- a/InspectorJournal/Views/ViolationTypes/Index.cshtml
+++ b/InspectorJournal/Views/ViolationTypes/Index.cshtml
@@ -36,11 +36,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.CorrectionPeriodDays)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.ViolationTypeId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ViolationTypeId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ViolationTypeId">Delete</a>
-            </td>
+                @Html.Partial("AdminActions", item.ViolationTypeId)
         </tr>
 }
     </tbody>
