--- a/InspectorJournal/Views/Inspectors/Index.cshtml
+++ b/InspectorJournal/Views/Inspectors/Index.cshtml
@@ -30,11 +30,7 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Department)
             </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.InspectorId">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.InspectorId">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.InspectorId">Delete</a>
-            </td>
+                @Html.Partial("AdminActions", item.InspectorId)
         </tr>
 }
     </tbody>
