Добавил сортировки и разбиение на страницы для таблиц ViolationTypes и Inspectors. Добавил сортировку по полю Inspector для  таблицы Inspections

--- a/InspectorJournal/Views/Inspections/Index.cshtml
+++ b/InspectorJournal/Views/Inspections/Index.cshtml
@@ -33,7 +33,14 @@
 <table class="table table-striped table-bordered">
     <thead class="table-dark">
         <tr>
-            <th>@Html.DisplayNameFor(model => model.FilterInspectionViewModel.Inspector)</th>
+            <th>
+                <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
+                   asp-route-Enterprise="@EnterpriseName"
+                   asp-route-ViolationType="@ViolationType"
+                   asp-route-PenaltyAmount="@PenaltyAmount">
+                    @Html.DisplayNameFor(model => model.FilterInspectionViewModel.Inspector)
+                </a>
+            </th>
             <th>
                 <a asp-action="Index" asp-route-sortOrder="@Model.SortViewModel.EnterpriseNameSort"
                    asp-route-Enterprise="@EnterpriseName"
