--- a/InspectorJournal/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/InspectorJournal/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using InspectorJournal.Areas.Identity
-@using InspectorJournal.Areas.Identity.Pages
-@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using InspectorJournal.Models
+@namespace InspectorJournal.Areas.Identity.Pages
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
