--- a/InspectorJournal/Views/Enterprises/Index.cshtml
+++ b/InspectorJournal/Views/Enterprises/Index.cshtml
@@ -7,72 +7,91 @@
     string EnterpriseAddress = Model.Address ?? "";
 }
 
-<h1>Список предприятий</h1>
+<div class="container mt-4">
+    <!-- Заголовок -->
+    <h2 class="mb-4 text-center">Список предприятий</h2>
 
-<p>
-    <a asp-action="Create">Создать</a>
-</p>
+    <!-- Блок кнопок -->
+    <div class="d-flex mb-3 justify-content-between align-items-center">
+        @if (user.IsInRole("Admin"))
+        {
+            <!-- Кнопка "Создать" доступна только админам -->
+            <a class="btn btn-success" asp-action="Create">Создать</a>
+        }
+        <!-- Кнопка "Поиск" для всех пользователей -->
+        <button id="searchToggleBtn" class="btn btn-info me-auto">Поиск</button>
+    </div>
 
-@using (Html.BeginForm("Index", "Enterprises", FormMethod.Get))
-{
-    <fieldset>
-        Название предприятия: @Html.TextBox("EnterpriseName", EnterpriseName)
-        Адресс: @Html.TextBox("EnterpriseAddress", EnterpriseAddress)
-        <input type="submit" value="Найти" />
-    </fieldset>
-}
+    <!-- Контейнер с формой фильтрации -->
+    <div id="searchForm" class="d-none mt-3">
+        @using (Html.BeginForm("Index", "Enterprises", FormMethod.Get))
+        {
+            <fieldset class="border p-4 rounded bg-light">
+                <legend class="w-auto">Фильтрация предприятий</legend>
+                <div class="d-flex flex-wrap">
+                    <!-- Название предприятия -->
+                    <div class="form-group mr-3">
+                        <label for="EnterpriseName" class="form-label">Название предприятия:</label>
+                        @Html.TextBox("EnterpriseName", EnterpriseName, new { @class = "form-control" })
+                    </div>
+                    <!-- Адрес -->
+                    <div class="form-group mr-3">
+                        <label for="EnterpriseAddress" class="form-label">Адрес:</label>
+                        @Html.TextBox("EnterpriseAddress", EnterpriseAddress, new { @class = "form-control" })
+                    </div>
+                    <!-- Кнопка поиска -->
+                    <div class="form-group align-self-end">
+                        <button type="submit" class="btn btn-primary">Найти</button>
+                    </div>
+                </div>
+            </fieldset>
+        }
+    </div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <a asp-action="Index" asp-route-sortOrder=@Model.SortViewModel.EnterpriseNameSort
-                asp-route-EnterpriseName="@EnterpriseName"
-                asp-route-EnterpriseAddress="@EnterpriseAddress">
-                    @Html.DisplayNameFor(model => model.Name)
-                </a>
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.OwnershipType)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Address)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DirectorName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.DirectorPhone)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Enterprises) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OwnershipType)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Address)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DirectorName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DirectorPhone)
-            </td>
-                @Html.Partial("AdminActions", item.EnterpriseId)
-        </tr>
-}
-    </tbody>
-</table>
+    <!-- Таблица предприятий -->
+    <table class="table table-striped table-bordered table-hover inspections-table">
+        <thead class="table-dark">
+            <tr>
+                <th>
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@Model.SortViewModel.EnterpriseNameSort"
+                       asp-route-EnterpriseName="@EnterpriseName"
+                       asp-route-EnterpriseAddress="@EnterpriseAddress">
+                        @Html.DisplayNameFor(model => model.Name)
+                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.EnterpriseNameAsc))
+                    </a>
+                </th>
+                <th>@Html.DisplayNameFor(model => model.OwnershipType)</th>
+                <th>@Html.DisplayNameFor(model => model.Address)</th>
+                <th>@Html.DisplayNameFor(model => model.DirectorName)</th>
+                <th>@Html.DisplayNameFor(model => model.DirectorPhone)</th>
+                @if (user.IsInRole("Admin"))
+                {
+                    <th>Действие</th>
+                }
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Enterprises)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.OwnershipType)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Address)</td>
+                    <td>@Html.DisplayFor(modelItem => item.DirectorName)</td>
+                    <td>@Html.DisplayFor(modelItem => item.DirectorPhone)</td>
+                    @if (user.IsInRole("Admin"))
+                    {
+                        <admin-actions item-id="@item.EnterpriseId" id-name="EnterpriseId"></admin-actions>
+                    }
+                </tr>
+            }
+        </tbody>
+    </table>
 
-<page-link page-model="Model.PageViewModel" page-action="Index"
-           page-url-EnterpriseName="@EnterpriseName"
-           page-url-EnterpriseAddress="@EnterpriseAddress"
-           page-url-sortOrder="@(Model.SortViewModel.CurrentState)"></page-link>
-
+    <!-- Пагинация -->
+    <page-link page-model="Model.PageViewModel" page-action="Index"
+               page-url-EnterpriseName="@EnterpriseName"
+               page-url-EnterpriseAddress="@EnterpriseAddress"
+               page-url-sortOrder="@(Model.SortViewModel.CurrentState)"></page-link>
+</div>
