--- a/InspectorJournal/Views/Home/Index.cshtml
+++ b/InspectorJournal/Views/Home/Index.cshtml
@@ -2,9 +2,8 @@
 @{
     ViewData["Title"] = "Проверки Предприятия";
 }
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-<div class="container mt-5">
+<div class="container">
     <h2 class="mb-4 text-center">Главное меню</h2>
 
     <div class="row">
