--- a/InspectorJournal/Views/Inspectors/Index.cshtml
+++ b/InspectorJournal/Views/Inspectors/Index.cshtml
@@ -6,55 +6,81 @@
     string InspectorName = Model.FullName ?? "";
 }
 
-<h1>Список инспекторов</h1>
+<div class="container mt-4">
+    <!-- Заголовок -->
+    <h2 class="mb-4 text-center">Список инспекторов</h2>
 
-<p>
-    <a asp-action="Create">Создать</a>
-</p>
+    <!-- Блок кнопок -->
+    <div class="d-flex mb-3 justify-content-between align-items-center">
+        @if (user.IsInRole("Admin"))
+        {
+            <!-- Кнопка "Создать" доступна только админам -->
+            <a class="btn btn-success" asp-action="Create">Создать</a>
+        }
+        <!-- Кнопка "Поиск" -->
+        <button id="searchToggleBtn" class="btn btn-info me-auto">Поиск</button>
+    </div>
 
-@using (Html.BeginForm("Index", "Inspectors", FormMethod.Get))
-{
-    <fieldset>
-        Инспектор: @Html.TextBox("InspectorName", InspectorName)
-        <input type="submit" value="Найти" />
-    </fieldset>
-}
+    <!-- Контейнер с формой фильтрации -->
+    <div id="searchForm" class="d-none mt-3">
+        @using (Html.BeginForm("Index", "Inspectors", FormMethod.Get))
+        {
+            <fieldset class="border p-4 rounded bg-light">
+                <legend class="w-auto">Фильтрация инспекторов</legend>
+                <div class="d-flex flex-wrap">
+                    <!-- ФИО инспектора -->
+                    <div class="form-group mr-3">
+                        <label for="InspectorName" class="form-label">Инспектор:</label>
+                        @Html.TextBox("InspectorName", InspectorName, new { @class = "form-control" })
+                    </div>
+                    <!-- Кнопка поиска -->
+                    <div class="form-group align-self-end">
+                        <button type="submit" class="btn btn-primary">Найти</button>
+                    </div>
+                </div>
+            </fieldset>
+        }
+    </div>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                <a asp-action="Index"
-                   asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
-                   asp-route-InspectorName="@InspectorName">
-                    @Html.DisplayNameFor(model => model.FullName)
-                </a>
+    <!-- Таблица инспекторов -->
+    <table class="table table-striped table-bordered table-hover inspections-table">
+        <thead class="table-dark">
+            <tr>
+                <th>
+                    <a asp-action="Index"
+                       asp-route-sortOrder="@Model.SortViewModel.InspectorNameSort"
+                       asp-route-InspectorName="@InspectorName"
+                       class="sort-link">
+                        @Html.DisplayNameFor(model => model.FullName)
+                        @Html.Raw(Model.SortViewModel.GetSortIndicator(SortState.InspectorNameAsc))
+                    </a>
+                </th>
+                <th>@Html.DisplayNameFor(model => model.Department)</th>
+                @if (user.IsInRole("Admin"))
+                {
+                    <th>Действия</th>
+                }
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var item in Model.Inspectors)
+            {
+                <tr>
+                    <td>@Html.DisplayFor(modelItem => item.FullName)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Department)</td>
+                    @if (user.IsInRole("Admin"))
+                    {
+                        <admin-actions item-id="@item.InspectorId" id-name="InspectorId"></admin-actions>
+                    }
+                </tr>
+            }
+        </tbody>
+    </table>
 
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Department)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model.Inspectors) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.FullName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Department)
-            </td>
-                @Html.Partial("AdminActions", item.InspectorId)
-        </tr>
-}
-    </tbody>
-</table>
-
-<page-link page-model="Model.PageViewModel"
-           page-action="Index"
-           page-url-InspectorName="@InspectorName"
-           page-url-sortOrder="@(Model.SortViewModel.CurrentState)">
-</page-link>
-
+    <!-- Пагинация -->
+    <page-link page-model="Model.PageViewModel"
+               page-action="Index"
+               page-url-InspectorName="@InspectorName"
+               page-url-sortOrder="@(Model.SortViewModel.CurrentState)">
+    </page-link>
+</div>
