Переписал регистрацию и наладил работу пользоватей

--- a/InspectorJournal/Views/Enterprises/Index.cshtml
+++ b/InspectorJournal/Views/Enterprises/Index.cshtml
@@ -30,7 +30,8 @@
                 <legend class="w-auto">Фильтрация предприятий</legend>
                 <div class="d-flex flex-wrap">
                     <!-- Название предприятия -->
-                    <div class="form-group mr-3">
+                    <div class="
+mr-3">
                         <label for="EnterpriseName" class="form-label">Название предприятия:</label>
                         @Html.TextBox("EnterpriseName", EnterpriseName, new { @class = "form-control" })
                     </div>
