--- a/InspectorJournal/Views/Shared/_LoginPartial.cshtml
+++ b/InspectorJournal/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
-@using InspectorJournal.Models
+﻿@using Microsoft.AspNetCore.Identity;
+@using InspectorJournal.Models;
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
@@ -8,20 +8,26 @@
     <form asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/Index", new { area = "" })" method="post" id="logoutForm" class="navbar-right">
         <ul class="nav navbar-nav navbar-right">
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">@UserManager.GetUserName(User)</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage" class="btn btn-link">
+                    @UserManager.GetUserName(User)
+                </a>
             </li>
 
-            @if (User.IsInRole("admin"))
+            @if (User.IsInRole("Admin"))
             {
                 <li>
-                    <a asp-area="" asp-controller="Users" asp-action="Index" title="Пользователи">Пользователи</a>
+                    <a asp-area="" asp-controller="Users" asp-action="Index" title="Пользователи" class="btn btn-info">
+                        Пользователи
+                    </a>
                 </li>
             }
             <li>
-                <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Сменить пароль">Сменить пароль</a>
+                <a asp-area="Identity" asp-page="/Account/Manage/ChangePassword" title="Сменить пароль" class="btn btn-warning">
+                    Сменить пароль
+                </a>
             </li>
             <li>
-                <button type="submit" class="btn btn-link navbar-btn navbar-link">Выход</button>
+                <button type="submit" class="btn btn-danger navbar-btn navbar-link">Выход</button>
             </li>
         </ul>
     </form>
@@ -29,7 +35,11 @@
 else
 {
     <ul class="nav navbar-nav navbar-right">
-        <li><a asp-area="Identity" asp-page="/Account/Login">Вход</a></li>
-        <li><a asp-area="Identity" asp-page="/Account/Register">Регистрация</a></li> 
+        <li>
+            <a asp-area="Identity" asp-page="/Account/Login" class="btn btn-primary">Вход</a>
+        </li>
+        <li>
+            <a asp-area="Identity" asp-page="/Account/Register" class="btn btn-secondary">Регистрация</a>
+        </li>
     </ul>
 }
